--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ sqlx = { version = "0.5.1", features = [ "sqlite", "runtime-async-std-native-tls
 async-std = { version = "1.9.0", features = [ "attributes" ] }
 anyhow = "1.0.38"
 clap = "2.33.3"
+roxmltree = "0.14.0"
