--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ async-std = { version = "1.9.0", features = [ "attributes" ] }
 anyhow = "1.0.38"
 clap = "2.33.3"
 roxmltree = "0.14.0"
+chrono = "0.4.19"
