--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sqlx = { version = "0.5.13", features = [ "sqlite", "runtime-async-std-native-tls" ] }
-async-std = { version = "1.11.0", features = [ "attributes" ] }
+sqlx = { version = "0.5.13", features = ["sqlite", "runtime-async-std-native-tls"] }
+async-std = { version = "1.11.0", features = ["attributes"] }
 anyhow = "1.0.57"
 clap = "3.1.18"
 roxmltree = "0.14.1"
 chrono = "0.4.19"
+indicatif = "0.17.0"
