--- a/.gitea/workflows/rust.yml
+++ b/.gitea/workflows/rust.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Setup
+      run: apt install -y cargo
     - name: Build
       run: cargo build --verbose
     - name: Run tests
