--- a/.gitea/workflows/rust.yml
+++ b/.gitea/workflows/rust.yml
@@ -17,9 +17,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Setup
-      run:
-      - apt update
-      - apt install -y cargo
+      run: |
+        apt update
+        apt install -y cargo
     - name: Build
       run: cargo build --verbose
     - name: Run tests
