--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,8 @@ roxmltree = "0.14.1"
 chrono = "0.4.24"
 indicatif = "0.17.0"
 md5 = "0.7.0"
+bytes = "1.4.0"
+prost = "0.11.8"
+
+[build-dependencies]
+prost-build = "0.11.8"
