--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,6 +16,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Install protoc
+      run: |
+        apt update
+        apt install -y protobuf-compiler
     - name: Build
       run: cargo build --verbose
     - name: Run tests
