--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,8 +18,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install protoc
       run: |
-        apt update
-        apt install -y protobuf-compiler
+        sudo apt update
+        sudo apt install -y protobuf-compiler
     - name: Build
       run: cargo build --verbose
     - name: Run tests
